# RoomCReconstruction

./: .clang-format  CMakeLists.txt  README.md
Archive/: Old_2d-wallfinder  Old_Code.txt  Old_Code_RoomCubes.txt  Old_Code_Triangle_recursion  Old_Code_Triangulation  Old_NewMerging_approach.txt
src/: Cluster.cpp  Cluster.hpp  Clustering.cpp  Clustering.hpp  Helper.cpp  Helper.hpp  SpecialPrinter.cpp  SpecialPrinter.hpp  TriangleAttempt.cpp  TriangleAttempt.hpp  TriangleFinding.cpp  TriangleFinding.hpp  TriangleLinking.cpp  TriangleLinking.hpp  TriangleNode3D.cpp  TriangleNode3D.hpp  main.cpp  rcr_io.cpp  rcr_io.hpp  wallextender.cpp  wallextender.hpp
